...
            android:text="Question:"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/question_submission_question_input"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/aileron"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:text="Answer:"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_submission_question_input" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/question_submission_answer_input"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/aileron"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:text="Question Type:"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_submission_answer_input" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/question_submission_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <AutoCompleteTextView
            android:id="@+id/question_submission_question_type_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/aileron"
            app:layout_constraintEnd_toEndOf="parent"
...
