...
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/play"
        android:title="Play" />
    <item
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/edit"
        android:title="Edit" />
    <item
        android:id="@+id/leaderboard"
...
