...
                android:fontFamily="@font/aileron_bold"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/jeopardy_button_00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="100"
                android:textSize="34sp" />

...
                android:textSize="34sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/jeopardy_point_total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aileron_bold"
        android:text="Total Points:"
        android:textSize="34sp"
...
